crates/compiler/codegen/tests/snapshots/mdtest_codegen_snapshots@arrays_in_cairo_m___array_bounds_and_memory_safety_2.snap
---
source: crates/compiler/codegen/tests/mdtest_snapshots.rs
description: "Codegen snapshot for mdtest: Arrays in Cairo-M - Array Bounds and Memory Safety 2"
input_file: mdtest/01-basics/05-arrays.md
---
Source:
fn test_main() -> u32 {
    let arr: [u32; 3] = [1, 2, 3];
    return test_array(arr);
}

fn test_array(arr: [u32; 3]) -> u32 {
    return arr[0];
}
============================================================
Generated CASM:
test_main:
test_main:
test_main_0:
   0: 23 1 0 3             // [fp + 3], [fp + 4] = u32(1)
   1: 23 2 0 5             // [fp + 5], [fp + 6] = u32(2)
   2: 23 3 0 7             // [fp + 7], [fp + 8] = u32(3)
   3: 43 3 0 _             // [fp + 0] = fp + 3
   4: 4 0 0 9              // Arg 0 slot 0: [fp + 9] = [fp + 0] + 0
   5: 10 12 9 _            // call test_array
   6: 4 10 0 -4            // Return value 0 slot 0: [fp -4] = [fp + 10] + 0
   7: 4 11 0 -3            // Return value 0 slot 1: [fp -3] = [fp + 11] + 0
   8: 11 _ _ _             // return
test_array:
test_array:
test_array_0:
   9: 8 -5 0 0             // [fp + 0] = [[fp + -5] + 0] (load array element)
  10: 8 -5 1 1             // [fp + 1] = [[fp + -5] + 1] (load array element slot 1)
  11: 4 0 0 -4             // Return value 0 slot 0: [fp -4] = [fp + 0] + 0
  12: 4 1 0 -3             // Return value 0 slot 1: [fp -3] = [fp + 1] + 0
  13: 11 _ _ _             // return
