crates/compiler/codegen/tests/snapshots/mdtest_codegen_snapshots@arrays_in_cairo_m___array_element_assignment.snap
---
source: crates/compiler/codegen/tests/mdtest_snapshots.rs
description: "Codegen snapshot for mdtest: Arrays in Cairo-M - Array Element Assignment"
input_file: mdtest/01-basics/05-arrays.md
---
Source:
fn assign_array_element() -> felt {
    let arr: [felt; 3] = [1, 2, 3];
    arr[0] = 42;           // Set first element
    arr[1] = 24;           // Set second element
    return arr[0];         // Return first element
}
============================================================
Generated CASM:
assign_array_element:
assign_array_element:
assign_array_element_0:
   0: 9 1 4 _              // [fp + 4] = 1
   1: 9 2 5 _              // [fp + 5] = 2
   2: 9 3 6 _              // [fp + 6] = 3
   3: 43 4 0 _             // [fp + 0] = fp + 4
   4: 4 0 0 1              // [fp + 1] = [fp + 0] + 0 (copy array pointer)
   5: 9 42 7 _             // [fp + 7] = 42
   6: 44 0 0 7             // [[fp + 0] + 0] = [fp + 7]
   7: 4 1 0 2              // [fp + 2] = [fp + 1] + 0 (copy array pointer)
   8: 9 24 8 _             // [fp + 8] = 24
   9: 44 1 1 8             // [[fp + 1] + 1] = [fp + 8]
  10: 8 2 0 3              // [fp + 3] = [[fp + 2] + 0] (load array element)
  11: 4 3 0 2147483644     // Return value 0: [fp -3] = [fp + 3] + 0
  12: 11 _ _ _             // return
