crates/compiler/codegen/tests/snapshots/mdtest_codegen_snapshots@arrays_in_cairo_m___basic_array_creation.snap
---
source: crates/compiler/codegen/tests/mdtest_snapshots.rs
description: "Codegen snapshot for mdtest: Arrays in Cairo-M - Basic Array Creation"
input_file: mdtest/01-basics/05-arrays.md
---
Source:
fn create_array() -> felt {
    let arr: [felt; 3] = [1, 2, 3];
    return arr[0];
}
============================================================
Generated CASM:
create_array:
create_array:
create_array_0:
   0: 9 1 2147483644 _     // [fp + -3] = 1
   1: 11 _ _ _             // return
