crates/compiler/codegen/tests/snapshots/mdtest_codegen_snapshots@arrays_in_cairo_m___constant_arrays.snap
---
source: crates/compiler/codegen/tests/mdtest_snapshots.rs
description: "Codegen snapshot for mdtest: Arrays in Cairo-M - Constant Arrays"
input_file: mdtest/01-basics/05-arrays.md
---
Source:
const POW2: [u32; 3] = [1, 2, 4];

fn const_arr_access_const_value() -> u32 {
    return POW2[0] + POW2[1] + POW2[2]; // Replaced with 1 + 2 + 4 = 7
}
============================================================
Generated CASM:
const_arr_access_const_value:
const_arr_access_const_value:
const_arr_access_const_value_0:
   0: 23 1 0 13            // [fp + 13], [fp + 14] = u32(1)
   1: 23 2 0 15            // [fp + 15], [fp + 16] = u32(2)
   2: 23 4 0 17            // [fp + 17], [fp + 18] = u32(4)
   3: 43 13 0 _            // [fp + 0] = fp + 13
   4: 8 0 0 1              // [fp + 1] = [[fp + 0] + 0] (load array element)
   5: 8 0 1 2              // [fp + 2] = [[fp + 0] + 1] (load array element slot 1)
   6: 23 1 0 19            // [fp + 19], [fp + 20] = u32(1)
   7: 23 2 0 21            // [fp + 21], [fp + 22] = u32(2)
   8: 23 4 0 23            // [fp + 23], [fp + 24] = u32(4)
   9: 43 19 3 _            // [fp + 3] = fp + 19
  10: 8 3 2 4              // [fp + 4] = [[fp + 3] + 2] (load array element)
  11: 8 3 3 5              // [fp + 5] = [[fp + 3] + 3] (load array element slot 1)
  12: 15 1 4 6             // u32([fp + 6], [fp + 7]) = u32([fp + 1], [fp + 2]) U32Add u32([fp + 4], [fp + 5])
  13: 23 1 0 25            // [fp + 25], [fp + 26] = u32(1)
  14: 23 2 0 27            // [fp + 27], [fp + 28] = u32(2)
  15: 23 4 0 29            // [fp + 29], [fp + 30] = u32(4)
  16: 43 25 8 _            // [fp + 8] = fp + 25
  17: 8 8 4 9              // [fp + 9] = [[fp + 8] + 4] (load array element)
  18: 8 8 5 10             // [fp + 10] = [[fp + 8] + 5] (load array element slot 1)
  19: 15 6 9 11            // u32([fp + 11], [fp + 12]) = u32([fp + 6], [fp + 7]) U32Add u32([fp + 9], [fp + 10])
  20: 4 11 0 2147483643    // Return value 0 slot 0: [fp -4] = [fp + 11] + 0
  21: 4 12 0 2147483644    // Return value 0 slot 1: [fp -3] = [fp + 12] + 0
  22: 11 _ _ _             // return
